# sgemm

./: CMakeLists.txt  main.cpp
cuda_matrix/: CMakeLists.txt  matrix_gpu.cpp  matrix_gpu.cu  matrix_gpu.cuh  matrix_gpu.hpp  sgemm_kernel.cu  sgemm_kernel.cuh
matrix/: CMakeLists.txt  matrix_cpu.cpp  matrix_cpu.hpp
matrix_cpu/: CMakeLists.txt  matrix_cpu.cpp  matrix_cpu.hpp
matrix_gpu/: CMakeLists.txt  matrix_gpu.cu  matrix_gpu.cuh  sgemm_kernel.cu  sgemm_kernel.cuh
src/: CMakeLists.txt  main.cu
